# minijson_reader

./: .clang-format  .clang-tidy  .gitignore  .requirement.txt  .travis.yml  CMakeLists.txt  GNUmakefile  LICENSE.txt  README.md  complex.json  gcovr.cfg  grep.cpp  json_pp.py  json_rpc.cpp  makefile  minijson_example.cpp  minijson_parser.cpp  minijson_reader.hpp  minijson_reader_as_specializations_tests.cpp  minijson_reader_tests.cpp  sca_property_parser.cpp  simpleBoolSequence.json  simpleDoubleSequence.json  simpleLongSequence.json  simpleOctetSequence.json  simpleStringSequence.json  simplebinarydata.json  simpleproperty.json  simplesequence.json  structproperty.json  structsequence.json  value_from.cpp  value_to.cpp
.github/workflows/: cmake.yml  codeql-analysis.yml
cmake/: CPM.cmake
test/: dispatcher.cpp  main.cpp  minijson_reader_tests.cpp
